Added Tests for PostTown